Add filters (no_status, max_dateEnd, status and tags)
